<resources>
    <!--<string name="app_name_tx">Pomiary 3.0</string>-->
    <string name="info_app_tx">Informacje o aplikacji</string>
    <string name="addNewDevice_tx">Dodaj nowe urządzenie</string>
    <string name="showDevices_tx">Urządzenia</string>
    <string name="new_device_tx">Nowe urządzenie</string>
    <string name="device_list_tx">Lista urządzeń</string>
    <string name="details_device_tx">Szczeguły urządzenia</string>
    <string name="device_choice_tx">Wybór urządzenia</string>
    <string name="measurements_list_tx">Lista pomiarów</string>
    <string name="details_measurement_tx">Szczeguły pomiaru</string>
    <string name="addNewMeasurement_tx">Dodaj nowy pomiar</string>
    <string name="dobryPomiarClickOK_tx">Zatwierdź:</string>
    <string name="password_change_tx">Zmiana hasła</string>
    <string name="delete_me_tx">Usuń mnie</string>
    <string name="informations_tx">Informacje</string>
    <string name="addMeasurementCamera_tx">Wykrywanie danych</string>
    <string name="detectedValues_tx">Wykryte wartości</string>
    <string name="systemName_tx">MeDataReader 1.0</string>
    <string name="measurementCorrection_tx">Korekta pomiaru</string>
    <string name="changePassword_tx">Zmiana hasła</string>
    <string name="email_settings_tx">Zmiana adresu e-mail</string>
    <string name="server_settings_tx">Zmiana adresu serwera</string>
    <string name="serverAddress_tx">http://62.93.43.66/med-reader</string>
    <string name="serverEmailAddress_tx">dominik.f.bazan@gmail.com</string>
    <string name="userName_tx">Nazwa użytkownika</string>
    <string name="loginButton_tx">Zalogowanie</string>
    <string name="registerButton_tx">Rejestracja</string>
    <string name="measurementsButton1_tx">Pomiary</string>
    <string name="val_tx">val</string>
    <string name="deviveName_tx">devive name</string>
    <string name="first_tx">First</string>
    <string name="second_tx">Second</string>
    <string name="third_tx">Third</string>
    <string name="results_tx">Rezultaty</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_list_devices">ListDevices</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
