<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent" >

<TextView
    android:id="@+id/date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2.5"
    android:text="@string/first_tx"
    android:textSize="@dimen/text_size_list_view"
    android:gravity="center" />
<TextView
    android:id="@+id/value"
    android:layout_height="wrap_content"
    android:layout_width="0dp"
    android:layout_weight="1.5"
    android:text="@string/second_tx"
    android:textSize="@dimen/text_size_list_view"
    android:gravity="right" />
<TextView
    android:id="@+id/unitDeviceM"
    android:layout_height="wrap_content"
    android:layout_width="0dp"
    android:layout_weight="1.8"
    android:text="@string/third_tx"
    android:textSize="@dimen/text_size_list_view"
    android:gravity="center" />

</LinearLayout>
